completed seed dummy for guidance and monitoring modules
