# src/validators/user.validator.js
@@ -7,3 +7,21 @@ export const createUserSchema = z.object({
   identityNumber: z.string().optional(),
   identityType: z.enum(["NIM", "NIP", "OTHER"]).optional(),
 });
+export const updateUserSchema = z.object({
+  fullName: z.string().min(1).optional(),
+  email: z.string().email().optional(),
+  roles: z
+    .array(
+      z.union([
+        z.string(),
+        z.object({
+          name: z.string(),
+          status: z.enum(["active", "nonActive"]).optional(),
+        }),
+      ])
+    )
+    .optional(),
+  identityNumber: z.string().optional(),
+  identityType: z.enum(["NIM", "NIP", "OTHER"]).optional(),
+  isVerified: z.boolean().optional(),
+});
